--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
 <body>
   <div class="container">
     <h1>10,000 Hour Clock</h1>
+
+    <!-- Countdown Timer -->
     <div class="timer">
       <span id="hours">10,000</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
     </div>
+
+    <!-- Hours Remaining for the Year -->
+    <div class="year-countdown">
+      <h2>Hours Remaining for the Year</h2>
+      <div class="year-timer">
+        <span id="year-hours">00</span>:<span id="year-minutes">00</span>:<span id="year-seconds">00</span>
+      </div>
+    </div>
+
+    <!-- Controls -->
     <div class="controls">
       <button id="start">Start</button>
       <button id="pause">Pause</button>
